--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <title>doc</title>
-     <link rel="icon" href="/images/icon.jpg" type="image/jpg"/>
-     <link rel="stylesheet" href="/css/style.css" />
-     <script src="/script/runs.js"></script>
+     <link rel="icon" href="images/icon.jpg" type="image/jpg"/>
+     <link rel="stylesheet" href="css/style.css" type="text/css" />
+     <script src="script/runs.js"></script>
    </head>
    <body>
      <mathalu class="mathalu">
