--- a/index.html
+++ b/index.html
@@ -1,44 +1,28 @@
-<!-- 
-  css ->style.css
-  script -> runs.js
- -->
- <!DOCTYPE html>
- <html lang="en">
-   <head>
-     <meta charset="UTF-8" />
-     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <title>doc</title>
-     <link rel="icon" href="images/icon.jpg" type="image/jpg"/>
-     <link rel="stylesheet" href="css/style.css" type="text/css" />
-     <script src="script/runs.js"></script>
-   </head>
-   <body>
-     <mathalu class="mathalu">
-       <a href="https://gujjucafe.com/shree-sava-nu-mahtva-in-gujarati/" target="_blank">શ્રી ૧|</a>
-     </mathalu>
-     <hr/>
-     <header>
-       <sectoin class="name" onclick="apply()">FG</sectoin>
-       <ul class="navbar">
-         <li class="active-button"><a href="/main.html">Home</a></li>
-         <li><a href="/html/trends.html">trends</a></li>
-         <li><a href="/html/emnam.html">emnam</a></li>
-         <li><a href="/html/abhyash.html">abhyash</a></li>
-         <li><a href="/html/rahat.html">rahat</a></li>
-         <li><a href="/html/contact.html">contact</a></li>
-         
-       </ul>
-     </header>
-     <main>
-         <div class="main-image">
-           <img src="/images/icon.jpg" alt="@fire_gujju">
-         </div>
-         <div class="main-content">
-           i'm an ENGINEER ( ͡° ͜ʖ ͡°)
-         </div>
- 
-     </main>
-     <!-- for experiments -->
-   </body>
- </html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <script src="scripts/main.js"></script>
+    <title>@FIRE_GUJJU</title>
+</head>
+<body>
+    <header>
+        FIRE_GUJJU
+    </header>
+    <nav>
+        <ul>
+            <li><a href="html/study.htm">Study Met</a></li>
+            <li><a href="html/trends.htm">Current Trends</a></li>
+            <li class="active-nav"><a href="#">Home</a></li>
+            <li><a href="html/app.htm">App</a></li>
+            <li><a href="html/contact.htm">Contact</a></li>
+        </ul>
+    </nav>
+    
+    <footer>
+        Discover something new every day at&nbsp; <a href="https://www.instagram.com/fire_gujju/" target="_blank"> fire_gujju </a>&nbsp; - your trusted source for inspiration.
+    </footer>
+</body>
+</html>
